--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header class="header">
 		<div class="container header-container">
 		<a class="logo">
-			<img src="./img/Logo.svg" alt="Webovio logo">
+			<img src="./img/logo.svg" alt="Webovio logo">
 		</a>
 		<button class="burger btn-reset" aria-label="Open menu">
 		<span class="burger-line"></span>
@@ -193,7 +193,7 @@
 			</div>
 			<div class="footer-bottom">
 				<a class="logo">
-					<img src="./img/Logo-footer.svg" alt="Webovio logo">
+					<img src="./img/logo-footer.svg" alt="Webovio logo">
 				</a>
 				<small class="copiryght">&copy;&nbsp;2020@webovio. All Rights Reserved.</small>
 			</div>
